# cen429-2025-2026-3-hilal-kutlu-cpp

./: CMakeLists.txt  DigitalJournalApp  Proje-Rapor.docx  digitaljournal_app  digitaljournal_app_temp  journal.db  runTests  runTestsCoverage  runTestsCoverage-CryptoUtils.gcda  runTestsCoverage-CryptoUtils.gcno  runTestsCoverage-DatabaseManager.gcda  runTestsCoverage-DatabaseManager.gcno  runTestsCoverage-DigitalJournalTests.gcda  runTestsCoverage-DigitalJournalTests.gcno  runTestsCoverage-SecurityUtils.gcda  runTestsCoverage-SecurityUtils.gcno  runTestsCoverage-UIUtils.gcda  runTestsCoverage-UIUtils.gcno  runTestsCoverage-digitaljournal.gcda  runTestsCoverage-digitaljournal.gcno
docs/FinalReport/: PenTestPlan.md  SecurityArchitecture.md
src/: CMakeLists.txt  main.cpp
src/crypto/header/: CryptoUtils.h  WhiteboxCrypto.h
src/crypto/src/: CryptoUtils.cpp  WhiteboxCrypto.cpp
src/digitaljournal/: CMakeLists.txt
src/digitaljournal/header/: DatabaseManager.h  digitaljournal.h
src/digitaljournal/src/: DatabaseManager.cpp  digitaljournal.cpp
src/digitaljournalapp/src/: digitaljournalapp.cpp
src/models/header/: Models.h
src/security/header/: HSMManager.h  SecureCommunicator.h  SecurityUtils.h  colors.h
src/security/src/: SecureCommunicator.cpp  SecurityUtils.cpp
src/tests/: CMakeLists.txt
src/ui/header/: UIUtils.h  colors.h
src/ui/src/: UIUtils.cpp
src/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  DigitalJournalTests.cpp  SecurityUtilsTests.cpp  TestMain.cpp
tests/digitaljournal/: digitaljournal_test.cpp
tests/security/: SecurityUtils.cpp
